fixed table position and alignment with plot

--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,12 @@
 	width:0%;
 }
 
+table#filelist {
+	word-wrap: break-word;
+	width: 100%;
+	max-width: 100%;
+}
+
 
 
 
